# cpp-project-template

./: CMakeLists.txt  main.cpp  show_array.h
include/: Solution.h
scripts/: build.sh  build_and_run.sh  build_main.sh  build_tests.sh  run_main.sh  run_tests.sh
src/: Solution.cpp
tests/: Solution_test.cpp
